<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background_blurred">

    <TextView
        android:id="@+id/empty_list_layout"
        style="@style/ItemText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:gravity="center"
        android:text="@string/no_targeting_specifics"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header_layout_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_corners_layout"
        android:layout_margin="@dimen/margin_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.dnc.marketingapp.presentation.ui.custom.CustomCounterView
            android:id="@+id/screen_counter"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_small"
            android:gravity="center_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_small"
            app:layout_constraintTop_toBottomOf="@id/screen_counter"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/targeting_specifics_title"
            android:textColor="@color/white"/>

        <View
            android:id="@+id/separator_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:background="@color/mediumGrey"
            app:layout_constraintTop_toBottomOf="@id/title"
            android:layout_marginTop="@dimen/margin_small"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ic_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_search"
            app:layout_constraintTop_toBottomOf="@id/separator_title"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="@dimen/margin_medium"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:lines="1"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            android:hint="@string/search"
            android:textColor="@color/white"
            android:textColorHint="@color/mediumGrey"
            android:textSize="@dimen/text_small"
            android:background="@android:color/transparent"
            app:layout_constraintStart_toEndOf="@id/ic_search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/separator_title"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/targeting_specifics_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"
        android:scrollbars="vertical"
        android:background="@drawable/round_corners_layout"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_margin="@dimen/margin_medium"
        app:layout_constraintBottom_toTopOf="@+id/continue_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_layout_container"
        tools:listitem="@layout/targeting_specifics_item_view" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/continue_button"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/margin_medium"
        android:background="@drawable/round_corners_shape"
        android:text="@string/continue_button_string"
        android:textSize="@dimen/text_medium"
        android:textStyle="bold"
        android:textColor="@color/darkGrey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <include
        android:id="@+id/targeting_specifics_progress"
        layout="@layout/loading_progress_bar"
        tools:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>