<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/margin_small"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="@dimen/card_view_corner_radius"
    app:cardElevation="@dimen/card_view_elevation"
    app:layout_goneMarginBottom="@dimen/margin_small">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/options_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:textColor="@color/darkGrey"
            android:textSize="@dimen/text_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Campaign setup, Admin and optimising, Email support, Monthly reports, Install, Conversion monitoring, Landing page, Phone support, Remarketing" />

        <View
            android:id="@+id/separator_options"
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@color/mediumGrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/options_text" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/listing_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:text="@string/listing_label"
            android:textAlignment="center"
            android:textColor="@color/labelColor"
            android:textSize="@dimen/text_small"
            android:layout_marginTop="@dimen/margin_small"
            app:layout_constraintEnd_toStartOf="@+id/vertical_guideline3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/separator_options" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/optimization_no_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:maxLines="2"
            android:text="@string/optimization_label"
            android:textAlignment="center"
            android:textColor="@color/labelColor"
            android:textSize="@dimen/text_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/vertical_guideline3"
            app:layout_constraintTop_toBottomOf="@+id/separator_options" />

        <View
            android:id="@+id/separator_listings_optimizations"
            android:layout_width="@dimen/divider_height"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_small"
            android:background="@color/mediumGrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/separator_options"
            app:layout_constraintBottom_toBottomOf="@id/separator_price"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/listing_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/mediumGrey"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/listing_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/listing_label"
            tools:text="2" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/optimization_no_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/listing_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/listing_text"
            app:layout_constraintTop_toBottomOf="@id/optimization_no_label"
            tools:text="2" />

        <View
            android:id="@+id/separator_price"
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@color/mediumGrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/optimization_no_text" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/campaign_price_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/price_label"
            android:textColor="@color/labelColor"
            android:textSize="@dimen/text_medium"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/separator_price" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/campaign_price_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/darkGrey"
            android:textSize="@dimen/text_big"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/campaign_price_label"
            tools:text="270 EUR" />

        <View
            android:id="@+id/separator_select_campaign"
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@color/mediumGrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/campaign_price_text" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/select_campaign"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_small"
            android:gravity="center"
            android:text="@string/select_campaign"
            android:textAllCaps="true"
            android:textColor="@color/darkGrey"
            android:textSize="@dimen/text_title"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/separator_select_campaign" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>